CHATS_SIT/force-app/main/default/objects/CHATS_Support__c.object
<CustomObject>
    <description>Object for chats county users to log issues, requests and questions, as well as for supervisors to submit new system-access requests.</description>
    <fields>
        <fullName>Access_Level_Requested__c</fullName>
        <description>Profiles eligible for selection by Supervisor</description>
        <inlineHelpText>Select the access level you are requesting for this user. For Read only, please include their job functions as related to CCCAP, the frequency they would log in, and general reason/need for access.</inlineHelpText>
        <label>Access Level Requested</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Access_Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Office Supervisor</fullName>
                </value>
                <value>
                    <fullName>Business Office Worker</fullName>
                </value>
                <value>
                    <fullName>Eligibility Worker</fullName>
                </value>
                <value>
                    <fullName>Eligibility Worker Supervisor</fullName>
                </value>
                <value>
                    <fullName>Fiscal Worker</fullName>
                </value>
                <value>
                    <fullName>Fiscal Worker Supervisor</fullName>
                </value>
                <value>
                    <fullName>Provider Worker</fullName>
                </value>
                <value>
                    <fullName>Provider Worker Supervisor</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Universal User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Request_Title_Info_Justification__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>If requesting Read Only or Universal access, enter user&apos;s county position title, their job functions as related to CCCAP, detail general reason/need for access, frequency they&apos;d log in, how current process is hindered without this person receiving access.</inlineHelpText>
        <label>Access Request Justification</label>
        <type>TextArea</type>
    </fields>
     <fields>
        <fullName>CCCAP_Review_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCCAP Review Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Impact_Category__c</fullName>
        <label>Change Impact Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduces Audit Risk</fullName>
                </value>
                <value>
                    <fullName>Ensures State and/or Federal Compliance</fullName>
                </value>
                <value>
                    <fullName>Improves County User Experience</fullName>
                </value>
                <value>
                    <fullName>Reduces County Workload</fullName>
                </value>
                <value>
                    <fullName>Improves State User Experience</fullName>
                </value>
                <value>
                    <fullName>Improves Provider User Experience</fullName>
                </value>
                <value>
                    <fullName>Improves Client/Family Experience</fullName>
                </value>
                <value>
                    <fullName>Reduces Provider Workload</fullName>
                </value>
                <value>
                    <fullName>Reduces State Workload</fullName>
                </value>
                <value>
                    <fullName>Impacts Provider Payment</fullName>
                </value>
                <value>
                    <fullName>Impacts Parent Fee</fullName>
                </value>
                <value>
                    <fullName>Impacts Eligibility Determinations</fullName>
                </value>
                <value>
                    <fullName>Impacts Third Party Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Request_Type__c</fullName>
        <inlineHelpText>NOTE: New Access or Changing Access requests may require training completion prior to access being given.</inlineHelpText>
        <label>Access Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Worker Access Request</fullName>
                </value>
                <value>
                    <fullName>Change Profile/Access</fullName>
                </value>
                <value>
                    <fullName>Deactivate Access</fullName>
                </value>
                <value>
                    <fullName>Learn Trac/Pilot Environment Access Request</fullName>
                </value>
                <value>
                    <fullName>Read-Only Access Request</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Awaiting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awaiting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CHATS_Support4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awaiting_User_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Awaiting User Begin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CA_Service_Desk_Ticket_Number__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CA Service Desk Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMTG_Review_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMTG Review Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHATS_Area__c</fullName>
        <inlineHelpText>Choose the area in CAPS you are experiencing the issue with, or have a request for, etc.</inlineHelpText>
        <label>CHATS/Policy Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Authorization &amp; Parent Fee</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>CHATS Canned Reports</fullName>
                </value>
                <value>
                    <fullName>Colorado Works Referral</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>County Level Case Reviews</fullName>
                </value>
                <value>
                    <fullName>County Plan</fullName>
                </value>
                <value>
                    <fullName>County Rate Plan</fullName>
                </value>
                <value>
                    <fullName>Dashboards &amp; Reports</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agreement for Licensed</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agreement for QE</fullName>
                </value>
                <value>
                    <fullName>Fraud/IPV</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Manual Claim</fullName>
                </value>
                <value>
                    <fullName>Monitoring Reports</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                    <label>Payment Adjustment</label>
                </value>
                <value>
                    <fullName>PEAK</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance Case Reviews</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SIDMOD</fullName>
                </value>
                <value>
                    <fullName>Sub Payment</fullName>
                    <isActive>false</isActive>
                    <label>Sub Payment</label>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Wait list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHATS_Supervisor__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Enter the name of the direct Supervisor for this staff person</inlineHelpText>
        <label>CHATS Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request_Status__c</fullName>
        <label>Change Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Technical</fullName>
                </value>
                <value>
                    <fullName>Pending Functional</fullName>
                </value>
                <value>
                    <fullName>Awaiting Client</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Ready for QA</fullName>
                </value>
                <value>
                    <fullName>Passed QA</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>Retest Failed</fullName>
                </value>
                <value>
                    <fullName>Ready for PROD</fullName>
                </value>
                <value>
                    <fullName>Not able to Reproduce</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>provide name of client on case for additional reference</inlineHelpText>
        <label>Client Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_or_Provider_Name__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Enter name of client or provider to help us ensure we are on the correct record.</inlineHelpText>
        <label>Client or Provider Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>BRE</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>CICD</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Data Conversion</fullName>
                </value>
                <value>
                    <fullName>Data Model</fullName>
                </value>
                <value>
                    <fullName>Datafix</fullName>
                </value>
                <value>
                    <fullName>DataPull</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Interfaces</fullName>
                </value>
                <value>
                    <fullName>KT</fullName>
                </value>
                <value>
                    <fullName>Logs</fullName>
                </value>
                <value>
                    <fullName>Performance Test</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>PSSP</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SIDMOD</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>UI</fullName>
                </value>
                <value>
                    <fullName>Web Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00005</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Elevated__c</fullName>
        <inlineHelpText>Enter the date and time this ticket was sent to Vendor or OIT CHATS Team</inlineHelpText>
        <label>Date Elevated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_to_Deactivate_Previous_Staff__c</fullName>
        <inlineHelpText>Enter the staff&apos;s last working day (will be deactivated that date at 4:00 PM).</inlineHelpText>
        <label>Date to Deactivate Previous Staff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Ticket_Created__c</fullName>
        <formula>TODAY () - Ticket_Created_Date_Date_only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Ticket Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defect_Priority__c</fullName>
        <label>Defect Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P0</fullName>
                    <label>P0 - Critical</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>P1 - Major</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 - Medium</label>
                </value>
		<value>
                    <fullName>P3</fullName>
                    <label>P3 - Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Steps_to_Reproduce__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>In detail, describe the problem, question or issue. Provide examples, steps and actual and expected results. This will assist us in reproducing the issue and troubleshooting.</inlineHelpText>
        <label>Description of Issue/Policy Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
     <fields>
        <fullName>Desired_PROD_Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desired PROD Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Phone_Number__c</fullName>
        <description>Call back number for user who has logged ticket or had a ticket logged on their behafl</description>
        <label>Direct Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Do_you_work_for_multiple_counties__c</fullName>
        <label>Do you work for multiple counties?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevated_to__c</fullName>
        <label>Elevated to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OIT</fullName>
                </value>
                <value>
                    <fullName>Vendor Support</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>CDHS</fullName>
                    <isActive>false</isActive>
                    <label>CDHS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Please enter the new staff&apos;s email address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Enter the first name of the staff member you are requesting access for</inlineHelpText>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Date__c</fullName>
        <inlineHelpText>Date and time state CCCAP/Helpdesk began working on this ticket.</inlineHelpText>
        <label>Initial Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Only internal State Staff can view these comments</inlineHelpText>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_staff_member_replacing_another__c</fullName>
        <inlineHelpText>If this staff member is replacing another select &quot;Yes&quot;, if not select &quot;No&quot;. Note that the system will only allow specifying an active CHATS user. If the staff member being replaced is already inactive in CHATS, select &quot;No&quot;.</inlineHelpText>
        <label>Is this staff member replacing another?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_ID__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>JIRA ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOE_Estimate__c</fullName>
        <label>LOE Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Enter the last name of the staff member you are requesting access for.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_on_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If logging the ticket for someone else, please enter their name here.</description>
        <label>Logged on Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CHATS_Support2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Ticket__c</fullName>
        <formula>IF(Support_Team_Assignee__c = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_staff_member_being_replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the staff member being replaced. Note that the system will only allow specifying an active CHATS user. If the staff member being replaced is already inactive in CHATS, select &quot;No&quot; to &quot;Is this staff member replacing another?&quot;.</inlineHelpText>
        <label>Name of staff member being replaced</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CHATS_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_LearnTrac_Access_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check if this is a new worker access request and that worker also needs access to LearnTrac for CHATS Training. They will receive access to the pilot environment.</inlineHelpText>
        <label>Needs LearnTrac Access/Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_System_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not System Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOM_Estimate__c</fullName>
        <label>OOM Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_reason_for_deactivation__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Specify reason for deactivation if not listed in previous field</inlineHelpText>
        <label>Other reason for deactivation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Enter the URL for the page you have an issue/question on (Copy the URL from the top of the page you are on, i.e., https://CCCAP--pilot.lightning.force.com). This provides a direct link to the page you are referring to in the description field.</inlineHelpText>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <inlineHelpText>New staff member&apos;s phone number</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Universal_User__c</fullName>
        <label>Reason for Universal User Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_REASON_FOR_UNIVERSAL_ACCESS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reopened_By_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopened By User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed by Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Reopen Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deactivation__c</fullName>
        <label>Reason for Deactivation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Longer in Position</fullName>
                </value>
                <value>
                    <fullName>Still in Position, but no longer needs CHATS access</fullName>
                </value>
                <value>
                    <fullName>Temporary Leave</fullName>
                </value>
                <value>
                    <fullName>Back-up Worker. Reactivate When Needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_s_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
        <label>Requestor&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot Reproduce</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Clarification</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Pending Triage</fullName>
                    <default>true</default>
                    <label>Pending Triage</label>
                </value>
                <value>
                    <fullName>Access Request</fullName>
                </value>
                <value>
                    <fullName>Pending Research</fullName>
                </value>
                <value>
                    <fullName>Datafix</fullName>
                    <isActive>true</isActive>
                </value>
		<value>
                    <fullName>QE Provider</fullName>
                    <isActive>true</isActive>
                </value>  
                <value>
                    <fullName>Report Request</fullName>
                    <isActive>true</isActive>
                </value>   
                <value>
                    <fullName>Data Fix</fullName>
                    <isActive>false</isActive>
                </value>
                		    
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_PROD_Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled PROD Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Administrator__c</fullName>
        <label>Security Administrator?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_YES_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Record_Number__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Please indicate the associated record where you are experiencing the issue based on your selected CHATS Area. Please copy and paste the full record id (i.e. 123456789).</inlineHelpText>
        <label>Specific Record Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Deactivation_Change_Date__c</fullName>
        <inlineHelpText>Access Request: Date new worker started/is starting the position; 
Deactivation Request: User&apos;s last working day (will be deactivated that day at ~4:00 PM); 
Change Profile: Date change in access should begin (training may be required prior to change).</inlineHelpText>
        <label>Begin Date for Start/Change/Deactivation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Default is &quot;new&quot;. State CCCAP Staff/Helpdesk update status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting User</fullName>
                </value>
                <value>
                    <fullName>Elevated</fullName>
                </value>
                <value>
                    <fullName>Fixed/Completed</fullName>
                </value>
                <value>
                    <fullName>Change Pending</fullName>
                </value>		
                <value>
                    <fullName>Change Approved</fullName>
                </value>
                <value>
                    <fullName>Change Denied</fullName>
                </value>
                <value>
                    <fullName>Change Implemented</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                 <value>
                    <fullName>Pending Research</fullName>
                </value>
                <value>
                    <fullName>Pending Leadership Review</fullName>
                </value>
                <value>
                    <fullName>Pending CCCAP Team Review</fullName>
                </value>
                <value>
                    <fullName>Pending CCMTG Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>